fix: fixed logo image turning into negative while in dark mode

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -201,9 +201,9 @@
     .vercelLogo {
         filter: invert(1);
     }
-    .logo {
+    /* .logo {
         filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-    }
+    } */
 }
 
 @keyframes rotate {
